# rusty

./: CHANGELOG.md  Cargo.toml  Gemfile  README.md  benchmark.rb  benchmark_viz.sh  fibonacci.rb  fibonacci_ffi.rb  main.rb  output.txt  rusty  simulate.rb
.cursor/: mcp.json  settings.json
src/: divide.rs  lib.rs  main.rs  mcp_server.rs
tests/: cli.rs  divide.rs
visualization/: index.html
