[package]
name = "rusty"
version = "0.1.0"
edition = "2021"

# Library configuration for FFI
[lib]
name = "rusty_lib"  # Changed to avoid name conflict with binary
crate-type = ["cdylib"]

# Binary configuration
[[bin]]
name = "rusty"
path = "src/main.rs"

[dependencies]
libc = "0.2"
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
serde_json = "1.0"
