[package]
name = "rusty"
version = "0.1.0"
edition = "2021"

# Library configuration for FFI
[lib]
name = "rusty_lib"  # Changed to avoid name conflict with binary
crate-type = ["cdylib"]

# Binary configuration
[[bin]]
name = "rusty"
path = "src/main.rs"

[dependencies]
libc = "0.2"
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
criterion = "0.5"
prettytable-rs = "0.10"
tokio = { version = "1.36", features = ["rt-multi-thread"] }
ollama-rs = "0.1.6"
