[package]
name = "rusty"
version = "0.1.0"
edition = "2021"

# Library configuration for FFI
[lib]
name = "rusty"
crate-type = ["cdylib", "rlib"]

# Binary configuration
[[bin]]
name = "rusty"
path = "src/main.rs"

[dependencies]
libc = "0.2"
clap = { version = "4.4.11", features = ["derive"] }
colored = "2.1.0"
criterion = "0.5"
prettytable-rs = "0.10.0"
tokio = { version = "1.35", features = ["full"] }
ollama-rs = "0.1.6"
chrono = "0.4"
http = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4.4"
actix-cors = "0.6"
futures = "0.3"
rt = "0.16.0"
